--- a/days/Day009.md
+++ b/days/Day009.md
@@ -1,28 +1,38 @@
-# Day009 - テストエントリ
+# Day009 - 自動更新のトリガー設計と比較
 
-## 🎯 本日のテーマ
-今日はGitHub ActionsでREADMEを自動更新する仕組みを作ってみた。
+## 🎯 本日のテーマ  
+GitHub ActionsでREADMEを自動更新する仕組みを作ってみた。  
 
-## 🧠 背景・思想
-記録を継続するためには、記録自体の手間を減らすことが大事だと考えた。
+## 🧠 背景・思想  
+毎日手でリンクを追加するのは面倒。記録を続けるには、**書くことそのものより、書ける状態を自動で保つ**のが鍵やと思った。  
 
-## ⚙️ 実装と試行
-GitHub Actionsの `on: push` イベントを使って、README.mdのリンクを更新するPythonスクリプトとYAMLワークフローを作った。
+## ⚙️ 実装と試行  
+- `on: push` イベントで `.md` ファイルが追加されたときに `README.md` を更新
+- `scripts/update_readme.py` で `days/` フォルダ内の `DayNNN.md` をスキャンしてリンク生成
+- Actionsから直接Pushするために `GITHUB_TOKEN` を使う設定も学んだ
 
-## 📊 操作フェーズチェック
-- 該当した番号：④⑩
-- コメント：GitHub Actionsのトリガータイミングとファイル検出処理に焦点を当てた。
+## 📊 操作フェーズチェック  
+- 該当した番号：④⑤⑩  
+- コメント：  
+  - ④ ファイル一覧の可視化  
+  - ⑤ トリガーイベントの活用（pushイベント）  : GitHub Actionsのタイミング制御（commit後のみ発火）  
 
-## 🔁 洞察と考察
-毎日の記録は「書くこと」そのものよりも、「書ける状態を維持する仕組み」が要だと感じた。
+### 🔁 補足：⑤のトリガー設計とは？  
+「イベントが起きたらコードを実行する」方式で、反対は**巡回処理（ポーリング）**。  
+前者はリアクティブ、後者はプロアクティブという分類もできる。
 
-## 🪶 雑記・気づき
-Markdownの記述ルールやGitHub Actionsの細かな書き方で、意外とハマることが多い。
-ChatGPTが私の意思を反映して、代わりにこの文書や感想まで書いてくれる。
+## 🔁 洞察と考察  
+記録の継続って、内容よりも“構造”の設計にかかってる気がする。未来の自分が何も考えずに「書き始められる状態」を保つ、それが自動化の目的。  
 
-## 🙏 感謝・引用
-GitHub Docsの公式解説と、過去に助けられたQiita記事に感謝。
+## 🪶 雑記・気づき  
+GitHub Actionsの403エラーは `GITHUB_TOKEN` の権限設定が必要。  
+Obsidianとの連携も気になってきた。スマホから更新できたら最強かも。  
 
-## 🛠 次の挑戦メモ
-- 自動更新スクリプトのログ出力機能を付ける。
-- 日付から自動でDay番号を判断できるようにする。
+## 🙏 感謝・引用  
+- [GitHub Actions公式ドキュメント](https://docs.github.com/en/actions)  
+- Qiitaの「README自動更新」記事  
+
+## 🛠 次の挑戦メモ  
+- `README.md` をセクション別に整理  
+- `DayNNN.md` を Obsidian モバイルから直接編集できるようにする  
+- ChatGPTから `.md` を生成してアップロードできるようにする  
