--- a/days/Day009.md
+++ b/days/Day009.md
@@ -12,10 +12,11 @@ GitHub ActionsでREADMEを自動更新する仕組みを作ってみた。
 - Actionsから直接Pushするために `GITHUB_TOKEN` を使う設定も学んだ
 
 ## 📊 操作フェーズチェック  
-- 該当した番号：④⑤⑩  
+- 該当した番号：④⑤
 - コメント：  
-  - ④ ファイル一覧の可視化  
-  - ⑤ トリガーイベントの活用（pushイベント）  : GitHub Actionsのタイミング制御（commit後のみ発火）  
+④ 可視化・可聴化：README に日ごとのリンクを明示的に並べる構造を設計
+⑤ トリガー設計：pushイベントを契機に処理を走らせる設計（リアクティブ）
+
 
 ### 🔁 補足：⑤のトリガー設計とは？  
 「イベントが起きたらコードを実行する」方式で、反対は**巡回処理（ポーリング）**。  
