--- a/days/Day009.md
+++ b/days/Day009.md
@@ -14,8 +14,8 @@ GitHub ActionsでREADMEを自動更新する仕組みを作ってみた。
 ## 📊 操作フェーズチェック  
 - 該当した番号：④⑤
 - コメント：  
-④ 可視化・可聴化：README に日ごとのリンクを明示的に並べる構造を設計
-⑤ トリガー設計：pushイベントを契機に処理を走らせる設計（リアクティブ）
+  - ④ 可視化・可聴化：README に日ごとのリンクを明示的に並べる構造を設計
+  - ⑤ トリガー設計：pushイベントを契機に処理を走らせる設計（リアクティブ）
 
 
 ### 🔁 補足：⑤のトリガー設計とは？  
