--- a/days/Day014.md
+++ b/days/Day014.md
@@ -13,6 +13,11 @@
 既存の“心”というシステムを、自分が意図して設計した別のルールで動かすハッキングでもある。  
 生物に対してこのような手法を使うとき、自分はこれを**「呪術」**と呼ぶことにする。
 
+※「呪術」という呼称は、2020年頃に東京・渋谷・大崎界隈で主催されていたヴィジュアルオーディオシステムの技術交流会「VJ概論」に由来する。  
+クラブイベントでヴィジュアルオーディオシステムをデジタルテクノロジーで制御し、会場にいる人の心を奪うテクニックを「呪術的である」と表現したことに着想を得ている。
+
+参考映像：[https://youtu.be/NjxFK54_bqQ](https://youtu.be/NjxFK54_bqQ)
+
 ## 🔁 洞察と考察
 心はコンピューターととても似ている。  
 むしろ、コンピューターの方が心に似せて作られているのかもしれない。  
@@ -24,4 +29,4 @@
 自己を拡張し、精神の範囲を機械に拡張するという視点が不可欠だ。
 
 ## 🏷 タグ
-#自己操作 #マインドハック #チューリング #心のプログラム #行動心理 #トリガー制御 #呪術 #ハッキング #サイボーグ思考
+#自己操作 #マインドハック #チューリング #心のプログラム #行動心理 #トリガー制御 #呪術 #ハッキング #サイボーグ思考 #VJ概論
