--- a/days/Day014.md
+++ b/days/Day014.md
@@ -28,5 +28,8 @@
 サイボーグを実現するには、精神の働きを利用し、自らデザインした働き方をさせる必要がある。  
 自己を拡張し、精神の範囲を機械に拡張するという視点が不可欠だ。
 
+「呪」という字は、人の形をしたもの（人形）に口で言葉を唱える様子を表した象形文字である。  
+生きた有機体の動作を操る技術を指す言葉として、まさにふさわしい表現であると感じる。
+
 ## 🏷 タグ
-#自己操作 #マインドハック #チューリング #心のプログラム #行動心理 #トリガー制御 #呪術 #ハッキング #サイボーグ思考 #VJ概論
+#自己操作 #マインドハック #チューリング #心のプログラム #行動心理 #トリガー制御 #呪術 #ハッキング #サイボーグ思考 #VJ概論 #象形文字考察
