--- a/days/Day029.md
+++ b/days/Day029.md
@@ -1,4 +1,5 @@
 
+---
 
 Day029 — リポジトリ取り込みと要約の下調べ（gitingest/repoback）
 
@@ -34,6 +35,40 @@ Day029 — リポジトリ取り込みと要約の下調べ（gitingest/repoback
 技術ワークフロー（編集）：
 
 1. .md を 2000〜3000字チャンク化 → 2) LLMで要約し章テーマへ割振り → 3) 要約＋原文対応を保持して再編集 → 4) 書籍化（Markdown→LaTeX/Pandoc→PDF）／雑誌化（Hugo等）／ネット記事化（章ごと独立）。
+
+
+
+進め方：Step1 既存200pを要約＆分類 → Step2 寓話追加で抽象→具体に翻訳 → Step3 章ごと編集＆読者テスト → Step4 1000p規模に拡大しつつ一貫性維持。
+
+
+🧪 明日の試験運用チェックリスト（抜粋）
+
+[ ] 対象Repo：hiro-collab/book（例）
+
+[ ] 取り込みツール：gitingest or repoback（代替）
+
+[ ] 除外設定：storage/**, .venv/**, .poetry-cache/** など
+
+[ ] チャンク設定：2000–3000字／Markdown見出し優先
+
+[ ] 要約スタイル：非技術者も読める／章テーマにひもづけ
+
+[ ] 出力：章テンプレ（第1章の試作）／対応表（原文→要約）
+
+
+📎 公開
+
+章立て案（GitHub）：https://github.com/hiro-collab/book/blob/main/summary_plan.md
+
+
+🙏 感謝・引用（追記）
+
+環境と関わり：自我を継続させることを目指せる環境、これまで支えてくれた関わりに感謝。
+
+ツールの開発者：gitingest／repoback をはじめ、OSSの作者・コミッターのみなさんに感謝。
+
+ひと言：道具とつながりが、思考のバトンをつないでくれる。
+
 
 
 
